[package]
name = "hacash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"


[dependencies]
chrono = "0.4.19"
lazy_static = "1.4.0"
hex = "0.4.3"
num-traits = "0.2"
num-bigint = "0.4.3"
rand = "0.8.5"
libsecp256k1 = "0.7.0"
ripemd = "0.1.1"
sha3 = "0.10.1"
sha2 = "0.10.2"
base58check = "0.1.0"
concat-idents = "1.1.3"

ini = "1.3.0"
rusty-leveldb = "0.3.6"
